<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_ticket"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountManagement.ViewTicketActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/ticket_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ticket_departureTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/departureTime"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/departureTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Departure Time:"
                    android:layout_weight="1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ticket_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Start Station:"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ticket_destination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/destination"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Destination Station:"
                    android:layout_weight="1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ticket_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Ticket Price:"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/btn_share_ticket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shareTicket" />


        <Button
            android:id="@+id/btn_ticketCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticketCode" />

    </LinearLayout>

</LinearLayout>