<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".Fragment.ProfileFragment"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/default_color"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/user_name_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Name"
                android:textSize="25dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:padding="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:padding="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_phone"
                android:padding="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"
                android:background="@android:color/white"/>

            <TextView
                android:id="@+id/point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_point"
                android:padding="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/user_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:padding="10dp"
                android:background="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#888585"
                android:text="@string/log_out"
                android:textColor="@color/default_color"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/change_language"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:backgroundTint="#888585"
                android:text="@string/change_language"
                android:textColor="@color/default_color"
                android:textSize="20sp"
                android:layout_gravity="left"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>