<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".AccountManagement.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/train" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/gotham"
                        android:gravity="center"
                        android:text="@string/txtWelcome"
                        android:textColor="@color/black"
                        android:textSize="27sp"
                        android:textStyle="bold" />
                </LinearLayout>







            </LinearLayout>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:padding="8dp"
                android:fontFamily="@font/calibri"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:fontFamily="@font/calibri"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/iv_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/et_password"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/baseline_remove_red_eye_24" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <CheckBox
                        android:id="@+id/cb_remember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/calibri"
                        android:text="@string/remember_me"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/tv_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="end"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/calibri"
                        android:text="@string/txtForget"
                        android:textColor="@color/colorPrimary"
                        android:focusable="true"/>
                </LinearLayout>



            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/btnLogin"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:cornerRadius="10dp" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/notifyRegister"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegister"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>