<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".Fragment.InboxFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:padding="5dp" />

                    <TextView
                        android:id="@+id/tv_optional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/optional" />

                    <EditText
                        android:id="@+id/edt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="" />

                <Button
                    android:id="@+id/bt_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_message" />

                <TextView
                    android:id="@+id/tv_auto_reply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"/>

            </LinearLayout>


        </ScrollView>

        <!-- Add ListView here -->
        <Spinner
            android:id="@+id/spinner_pre_existing_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</FrameLayout>